fixed alignment in IE

--- a/demo/inspector.css
+++ b/demo/inspector.css
@@ -1,6 +1,10 @@
 
 body {padding: 40px 0 150px}
 
+.outer-container {
+    display: inline-table;
+}
+
 .infobar {
     margin:0;
     position:fixed;
